--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 flask
-opencv-python
+opencv-contrib-python==4.9.0.80
 insightface
-numpy
+numpy==1.26.4
 pillow
 onnxruntime-gpu
 multiprocess
 pandas
 apscheduler
 requests
+onnxruntime
