--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 # C extensions
 *.so
 
+# Игнорировать модели
+/models/
+/outputs/
+/assets/dog.jpg
+
 # Distribution / packaging
 .Python
 build/
