--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-flask
-opencv-python
-insightface
-numpy
-pillow
-onnxruntime-gpu
-multiprocess
-pandas
-apscheduler
-requests
+# Основные библиотеки для YOLOX + инференс
+numpy>=1.19
+opencv-python>=4.5
+Pillow>=8.0
+
+# ONNX + ONNXRuntime (для инференса)
+onnx>=1.9
+onnxruntime>=1.9
+
+# Torch (для работы с checkpoint .pth, если понадобится)
+torch>=1.8
+
+# OpenVINO (для инференса через IR)
+openvino>=2022.1
+
+# Утилиты
+tqdm>=4.60
