--- a/RTMDet/requirements.txt
+++ b/RTMDet/requirements.txt
@@ -1,10 +1,35 @@
-opencv-python
+#pip install -U openmim
+
+# =========================
+# Core PyTorch (CPU only)
+# =========================
+torch==2.2.0
+torchvision==0.17.0
+torchaudio==2.2.0
+
+# =========================
+# OpenMMLab stack
+# =========================
+mmengine==0.10.3
+mmcv==2.0.1
+mmdet==3.1.0
+mmdeploy==1.3.1
+
+# =========================
+# ONNX stack
+# =========================
 numpy==1.26.4
-mmcv==2.1.0
-mmdet==3.3.0
-mmengine==0.10.4
-torch==2.3.1
-onnxruntime==1.18.0
+onnx==1.15.0
+onnxruntime==1.16.3
+
+# =========================
+# Image & Utils
+# =========================
+pyyaml==6.0.1
+pillow==10.3.0
+opencv-python==4.9.0.80
+packaging==23.2
+
 # pip install "openvino-dev<=2024.6.0" --force-reinstall   ## Если openvino-dev ругается на версию питона
 #git clone -b main https://github.com/open-mmlab/mmdeploy.git
 #git clone -b 3.x https://github.com/open-mmlab/mmdetection.git
