--- a/RTMDet/requirements.txt
+++ b/RTMDet/requirements.txt
@@ -30,6 +30,9 @@ pillow==10.3.0
 opencv-python==4.9.0.80
 packaging==23.2
 
+openvino==2023.3.0
+openvino-dev==2023.3.0
+
 # pip install "openvino-dev<=2024.6.0" --force-reinstall   ## Если openvino-dev ругается на версию питона
 #git clone -b main https://github.com/open-mmlab/mmdeploy.git
 #git clone -b 3.x https://github.com/open-mmlab/mmdetection.git
