--- a/scrfd_detection/requirements.txt
+++ b/scrfd_detection/requirements.txt
@@ -1,34 +1,43 @@
-# Кросс-платформенные зависимости для системы распознавания лиц
-insightface>=0.7.3
-numpy>=1.21.0
-opencv-python>=4.5.0
-scikit-learn>=1.0.0
-onnxruntime>=1.12.0
-tqdm>=4.62.0
-psutil>=5.8.0
-Pillow>=8.3.0
+# Core dependencies
+insightface==0.7.3
+numpy==1.24.3
+opencv-python==4.9.0.80
+scikit-learn==1.3.0
+onnxruntime==1.15.1
+tqdm==4.65.2
+psutil==7.1.0
+Pillow==11.3.0
 
-# TensorFlow с оптимизациями для разных платформ
-# Windows: лучше работает с CUDA
-tensorflow>=2.12.0; platform_system=="Windows"
-# Linux: оптимизированная версия
-tensorflow>=2.12.0; platform_system=="Linux"  
-# macOS: отдельная ветка
-tensorflow-macos>=2.10.0; platform_system=="Darwin"
-tensorflow-metal>=0.5.0; platform_system=="Darwin"
+# TensorFlow (CPU version — ваша система использует tensorflow-intel)
+tensorflow==2.13.1
 
-# PyTorch для определения GPU (опционально)
-torch>=1.12.0; platform_system=="Windows" or platform_system=="Linux"
-torch>=1.12.0; platform_system=="Darwin"
+# PyTorch (CPU-only, как в вашем freeze)
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
 
-# MediaPipe для распознавания рук и поз
-mediapipe>=0.9.0
+# MediaPipe for hand detection
+mediapipe==0.10.11
 
-# Совместимость с Python < 3.8
-pickle5>=0.0.11; python_version < "3.8"
+# Optional but used in your code
+matplotlib==3.10.6
+pandas==2.3.3
+scipy==1.15.3
+h5py==3.14.0
+protobuf==3.20.3
+requests==2.28.2
+certifi==2025.8.3
+urllib3==1.26.20
 
-# Опциональные зависимости для лучшей производительности
-# Intel MKL optimizations для Linux
-intel-openmp>=2021.3; platform_system=="Linux"
-# Windows Visual C++ redistributable optimizations  
-microsoft-visual-cpp-redist; platform_system=="Windows"
+# For compatibility and utils
+six==1.17.0
+typing_extensions==4.5.0
+packaging==24.2
+filelock==3.14.0
+platformdirs==4.4.0
+
+# Logging and formatting
+coloredlogs==15.0.1
+humanfriendly==10.0
+
+# For object detection (used in people_detection.py)
+torchvision==0.14.1+cpu
